@@ -540,6 +540,26 @@ public interface PipesFluentPipeline<S, E> {
      */
     public PipesFluentPipeline<S, E> table();
 
+    /**
+     * Add a TreePipe to the end of the Pipeline
+     * This step maintains an internal tree representation of the paths that have flowed through the step.
+     *
+     * @param tree            an embedded Map data structure to store the tree representation in
+     * @param branchFunctions functions to apply to each path object in a round robin fashion
+     * @return the extended Pipeline
+     */
+    public PipesFluentPipeline<S, E> tree(final Map tree, final PipeFunction... branchFunctions);
+
+
+    /**
+     * Add a TreePipe to the end of the Pipeline
+     * This step maintains an internal tree representation of the paths that have flowed through the step.
+     *
+     * @param branchFunctions functions to apply to each path object in a round robin fashion
+     * @return the extended Pipeline
+     */
+    public PipesFluentPipeline<S, E> tree(final PipeFunction... branchFunctions);
+
 
     ///////////////////////
     /// TRANSFORM PIPES ///
